; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/platform/gl/extr_gl-main.c_jump_to_location_xy.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/platform/gl/extr_gl-main.c_jump_to_location_xy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@draw_page_ctm = common dso_local global i32 0, align 4
@ctx = common dso_local global i32 0, align 4
@doc = common dso_local global i32 0, align 4
@currentpage = common dso_local global i32 0, align 4
@scroll_x = common dso_local global i32 0, align 4
@scroll_y = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, float, float)* @jump_to_location_xy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @jump_to_location_xy(i32 %0, float %1, float %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca float, align 4
  %6 = alloca float, align 4
  %7 = alloca %struct.TYPE_3__, align 4
  store i32 %0, i32* %4, align 4
  store float %1, float* %5, align 4
  store float %2, float* %6, align 4
  %8 = load float, float* %5, align 4
  %9 = load float, float* %6, align 4
  %10 = load i32, i32* @draw_page_ctm, align 4
  %11 = call i64 @fz_transform_point_xy(float %8, float %9, i32 %10)
  %12 = bitcast %struct.TYPE_3__* %7 to i64*
  store i64 %11, i64* %12, align 4
  %13 = call i32 (...) @clear_future()
  %14 = call i32 (...) @push_history()
  %15 = load i32, i32* @ctx, align 4
  %16 = load i32, i32* @doc, align 4
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @fz_clamp_location(i32 %15, i32 %16, i32 %17)
  store i32 %18, i32* @currentpage, align 4
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* @scroll_x, align 4
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  store i32 %22, i32* @scroll_y, align 4
  %23 = call i32 (...) @push_history()
  ret void
}

declare dso_local i64 @fz_transform_point_xy(float, float, i32) #1

declare dso_local i32 @clear_future(...) #1

declare dso_local i32 @push_history(...) #1

declare dso_local i32 @fz_clamp_location(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
